# cooking-generics

./: .gitignore  Dump.hs  LICENSE  Menu.hs  README.md  Test.hs  generics.cabal
