name:                generics
version:             0.1.2
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Generics
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 
  exposed-modules:
    Dump
    Menu

  build-depends:       
    base            >= 4.6 && <4.10,
    ghc             >= 7.10 && < 8.1,
    ghc-paths       >= 0.1  && <0.2,
    text            -any,
    pretty-show     -any,
    directory       -any

  default-language:    Haskell2010
